// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3 {
  position: relative;
  border-color: #D2D2D2;
  background-color: transparent;
  height: 100%;
}

.c3:hover,
.c3:focus-within {
  border-color: #b9b9b9;
}

.c4 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: not-allowed;
  opacity: 0.5;
  border-color: #D2D2D2;
  outline: none;
}

.c4:hover,
.c4:focus,
.c4:focus-visible {
  border-color: #b9b9b9;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c3"
  >
    <textarea
      class="c4"
      disabled=""
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</div>
`;

exports[`renders 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3 {
  position: relative;
  border-color: #D2D2D2;
  background-color: transparent;
  height: 100%;
}

.c3:hover,
.c3:focus-within {
  border-color: #b9b9b9;
}

.c4 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D2D2D2;
  outline: none;
}

.c4:hover,
.c4:focus,
.c4:focus-visible {
  border-color: #b9b9b9;
}

<div
  class="c0 Textarea"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c3"
  >
    <textarea
      class="c4"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
</div>
`;

exports[`renders with error 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c5 {
  margin-top: 8px;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c6 {
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  text-align: left;
  cursor: inherit;
  color: #D82C2C;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3 {
  position: relative;
  border-color: #D82C2C;
  background-color: transparent;
  height: 100%;
}

.c3:hover,
.c3:focus-within {
  border-color: #D82C2C;
}

.c4 {
  font-size: 16px;
  line-height: 20px;
  background: #FFFFFF;
  border: 2px solid #D2D2D2;
  box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  padding: 16px;
  color: #112035;
  resize: both;
  cursor: text;
  opacity: 1;
  border-color: #D82C2C;
  outline: none;
}

.c4:hover,
.c4:focus,
.c4:focus-visible {
  border-color: #D82C2C;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="subtext"
      cursor="inherit"
      for="textarea_id"
      title=""
    >
      Textarea label
    </label>
  </div>
  <div
    class="c3"
  >
    <textarea
      class="c4"
      id="textarea_id"
      placeholder="Placeholder text!"
      rows="4"
    />
  </div>
  <span
    class="c5 c6"
    color="error"
    cursor="inherit"
    title=""
  >
    Something really quite terrible has gone wrong here!
  </span>
</div>
`;
